--- a/Project 1/homepage.html
+++ b/Project 1/homepage.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogs</title>
+    <link rel="stylesheet" href="./styles/homepage.style.css">
 </head>
 <body>
     <header>
         <div>
+            <img src="https://pbs.twimg.com/profile_images/1606989631173832704/ATiSmD5e_400x400.jpg" alt="Logo" height="40px">
             <h1>PWSkills Blog</h1>
         </div>
         <div>
-            <h1>&plus;</h1>
+            <p>&plus;</p>
         </div>
     </header>
     
@@ -27,8 +29,8 @@
                 <textarea id="blog" cols="30" rows="10" placeholder="Write.." required></textarea>
                 <button type="submit">Add Blog</button>
             </form>
-            </div>
-        </section>
+        </div>
+    </section>
 
         <main id="container">
             
