--- a/Project 1/homepage.html
+++ b/Project 1/homepage.html
@@ -20,7 +20,7 @@
     <section id="input-section">
         <div>
             <div>
-                <h1>&times;</h1>
+                <h1 class="close">&times;</h1>
             </div>
             <form onsubmit="handleBlog()">
                 <input type="text" id="url" placeholder="Enter Blog Post URL:" required>
