--- a/Project 1/homepage.html
+++ b/Project 1/homepage.html
@@ -12,15 +12,15 @@
             <img src="https://pbs.twimg.com/profile_images/1606989631173832704/ATiSmD5e_400x400.jpg" alt="Logo" height="40px">
             <h1>PWSkills Blog</h1>
         </div>
-        <div>
+        <div onclick="handleNewBlog()">
             <p>&plus;</p>
         </div>
     </header>
     
     <section id="input-section">
         <div>
-            <div>
-                <h1 class="close">&times;</h1>
+            <div onclick="closeInputSection()">
+                <p class="close">&times;</p>
             </div>
             <form onsubmit="handleBlog()">
                 <input type="text" id="url" placeholder="Enter Blog Post URL:" required>
