--- a/Project 1/homepage.html
+++ b/Project 1/homepage.html
@@ -24,7 +24,7 @@
             </div>
             <form onsubmit="handleBlog()">
                 <input type="text" id="url" placeholder="Enter Blog Post URL:" required>
-                <input type="text" id="title" placeholder="Enter Blog Title:" required>
+                <input type="text" id="title" placeholder="Enter Blog Title:" required maxlength="50">
                 <input type="text" id="desc" placeholder="Enter Blog Description:" required>
                 <textarea id="blog" cols="30" rows="10" placeholder="Write.." required></textarea>
                 <button type="submit">Add Blog</button>
