--- a/Project 1/blogpage.html
+++ b/Project 1/blogpage.html
@@ -4,34 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogs</title>
+    <link rel="stylesheet" href="./styles/homepage.style.css">
+    <link rel="stylesheet" href="./styles/blogpage.css">
 </head>
 <body>
         <header>
             <div>
+                <img src="https://pbs.twimg.com/profile_images/1606989631173832704/ATiSmD5e_400x400.jpg" alt="Logo" height="40px">
                 <h1>PWSkills Blog</h1>
             </div>
-            <div>
-                <h1 style="rotate: 180deg;">&#10132;</h1>
+            <div onclick="backTohome()">
+                <p style="rotate: 180deg;">&#10132;</p>
             </div>
         </header>
 
-        <section>
-            <div>
-                <div>
-                    <h1></h1>
-                    <p></p>
-                </div>
-
-                <div>
-                    <img src="" alt="">
-                </div>
-            </div>
-
-            <div>
-                <p>
-                    
-                </p>
-            </div>
+        <section id="container">
+            
         </section>
 </body>
 </html>
+
+<script src="./script2.js"></script>
