--- a/Project 1/blogpage.html
+++ b/Project 1/blogpage.html
@@ -18,7 +18,7 @@
             </div>
         </header>
 
-        <section id="container">
+        <section id="Blogcontainer">
             
         </section>
 </body>
