--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies</title>
     <link rel="stylesheet" href="./style.css">
+
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/3304/3304517.png" type="image/x-icon">
+
 </head>
 <body>
     <header>
